--- a/Hito1.qmd
+++ b/Hito1.qmd
@@ -125,6 +125,9 @@ Además, en los últimos 2 años ha obtenido un retorno promedio de 37.5%, mayor
 Otro aspecto que nos hizo elegir un peso mayor que las otras compañías es su compromiso con el medio ambiente, aspecto que cada vez es más valorado.
 Por otro lado, la empresa ha invertido fuertemente en nuevos proyectos que probablemente demuestren mayores retornos en el futuro.
 
+Por otro lado, al Banco de Chile se le asignó un 30% de peso en el portafolio debido a su liderazgo en la industria bancaria en términos de rentabilidad y ha jugado un papel sumamente importante a lo largo de los años en la industria financiera.
+Junto a esto, la proyección del banco en términos de crecimiento para los próximos años, es positiva y cercana a un 11.8%.
+
 Finalmente, a Parque Arauco se le otorgó un 20% del portafolio debido a la diversificación del modelo de negocios que han implementado en los últimos años.
 El ingreso al negocio de los edificios multifamily podría ser una razón de gran crecimiento para la empresa en el futuro, debido a que actualmente ya operan dos edificios en Santiago, tienen proyectos que estarán operando en el corto plazo en Perú y Colombia, y tienen planes de seguir ampliando esta cantidad.
 Considerando la gran demanda de arriendo que existe hoy en día, la empresa podría verse muy beneficiada con la implementación de este nuevo negocio.
